--- a/HTML/login and signup pages/login.html
+++ b/HTML/login and signup pages/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Red Hawk Lux</title>
+    <link rel="icon" href="/images/hawk-logo-color.png" type="image/x-icon" />
 
     <link
       rel="stylesheet"
@@ -12,6 +13,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/CSS/login and signup css/login.css" />
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -29,8 +31,20 @@
     ></script>
   </head>
   <body>
-
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container px-4 px-lg-5 d-flex justify-content-center">
+        <a class="navbar-brand d-flex flex-column align-items-center" href="/index.html">
+          <img
+            src="/images/hawk-logo-color.png"
+            alt="Red Hawk Luz logo. The Red Hawk."
+            height="50"
+            width="50"
+            class="mb-1"
+          />
+          <span class="text-center">Red Hawk Lux</span>
+        </a>
+      </div>
+    </nav>
   </body>
   <footer class="py-5 bg-dark">
     <div class="container">
