--- a/HTML/login and signup pages/signup.html
+++ b/HTML/login and signup pages/signup.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Red Hawk Lux</title>
+    <link rel="icon" href="/images/hawk-logo-color.png" type="image/x-icon" />
 
     <link
       rel="stylesheet"
@@ -29,9 +30,23 @@
     ></script>
   </head>
   <body>
-
-
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container px-4 px-lg-5 d-flex justify-content-center">
+        <a
+          class="navbar-brand d-flex flex-column align-items-center"
+          href="/index.html"
+        >
+          <img
+            src="/images/hawk-logo-color.png"
+            alt="Red Hawk Luz logo. The Red Hawk."
+            height="50"
+            width="50"
+            class="mb-1"
+          />
+          <span class="text-center">Red Hawk Lux</span>
+        </a>
+      </div>
+    </nav>
   </body>
   <footer class="py-5 bg-dark">
     <div class="container">
