--- a/HTML/seller/seller_login.html
+++ b/HTML/seller/seller_login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Red Hawk Lux</title>
+    <link rel="icon" href="/images/hawk-logo-color.png" type="image/x-icon" />
 
     <link
       rel="stylesheet"
@@ -30,7 +31,7 @@
   </head>
   <body>
 
-    
+
   </body>
   <footer class="py-5 bg-dark">
     <div class="container">
