--- a/HTML/login and signup pages/login.html
+++ b/HTML/login and signup pages/login.html
@@ -69,7 +69,7 @@
                 <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
                 <hr class="my-4">
                 <div>
-                  <p class="mb-0">Don't have an account? <a href="#!" class="text-black-50 fw-bold">Sign Up</a>
+                  <p class="mb-0">Don't have an account? <a href="/HTML/login and signup pages/signup.html" class="text-black-50 fw-bold">Sign Up</a>
                   </p>
                 </div>
                 
