added buttons to admin page

--- a/HTML/admin/admin.html
+++ b/HTML/admin/admin.html
@@ -18,7 +18,10 @@
 
     <footer class="py-5 bg-dark">
         <div class="container">
+          <a href="/HTML/login and signup pages/login.html" class="btn btn-info" role="button">Search</a>  
+          <a href="/HTML/login and signup pages/login.html" class="btn btn-info" role="button">Options</a>
           <p class="m-0 text-center text-white">
+            
             Copyright &copy; Red Hawk Lux 2024
           </p>
         </div>
