--- a/HTML/login and signup pages/signup.html
+++ b/HTML/login and signup pages/signup.html
@@ -48,41 +48,132 @@
       </div>
     </nav>
 
-    <section class="vh-100" style="background-color: #ffffff">
-      <div class="container py-5 h-90">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-          <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-            <div class="card shadow-2-strong" style="border-radius: 1rem">
-              <div class="card-body p-5 text-center">
-                <h3 class="mb-5">Welcome to Red Hawk Lux</h3>
-                <h3 class="mb-5">Sign Up</h3>
+    <section class="vh-100 d-flex justify-content-center align-items-center">
+      <div class="container py-5 h-100">
+        <div class="row justify-content-center align-items-center h-100">
+          <div class="col-12 col-lg-9 col-xl-7">
+            <div
+              class="card shadow-2-strong card-registration"
+              style="border-radius: 15px"
+            >
+              <div class="card-body p-4 p-md-5">
+                <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 text-center">Registration Form</h3>
+                <form>
+                  <div class="row">
+                    <div class="col-md-6 mb-4">
+                      <div class="form-outline">
+                        <input
+                          type="text"
+                          id="firstName"
+                          class="form-control form-control-lg"
+                          required
+                        />
+                        <label class="form-label" for="firstName"
+                          >First Name</label
+                        >
+                      </div>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                      <div class="form-outline">
+                        <input
+                          type="text"
+                          id="lastName"
+                          class="form-control form-control-lg"
+                          required
+                        />
+                        <label class="form-label" for="lastName"
+                          >Last Name</label
+                        >
+                      </div>
+                    </div>
+                  </div>
 
-                <div class="form-outline mb-4">
-                  <button
-                    class="btn btn-outline-primary btn-lg btn-block"
-                    onclick="window.location.href='/HTML/admin/admin_signup.html'"
-                  >
-                    Admin Account
-                  </button>
-                </div>
+                  <div class="row">
+                    <div class="col-md-6 mb-4">
+                      <div class="form-outline">
+                        <input
+                          type="text"
+                          id="username"
+                          class="form-control form-control-lg"
+                          required
+                        />
+                        <label class="form-label" for="username"
+                          >Username</label
+                        >
+                      </div>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                      <div class="form-outline">
+                        <input
+                          type="password"
+                          id="password"
+                          class="form-control form-control-lg"
+                          required
+                        />
+                        <label class="form-label" for="password"
+                          >Password</label
+                        >
+                      </div>
+                    </div>
+                  </div>
 
-                <div class="form-outline mb-4">
-                  <button
-                    class="btn btn-outline-primary btn-lg btn-block"
-                    onclick="window.location.href='/HTML/buyer/buyer_signup.html'"
-                  >
-                    Buyer Account
-                  </button>
-                </div>
+                  <div class="row">
+                    <div class="col-md-6 mb-4 pb-2">
+                      <div class="form-outline">
+                        <input
+                          type="email"
+                          id="emailAddress"
+                          class="form-control form-control-lg"
+                          required
+                        />
+                        <label class="form-label" for="emailAddress"
+                          >Email</label
+                        >
+                      </div>
+                    </div>
+                    <div
+                      id="businessNameRow"
+                      class="col-md-6 mb-4"
+                      style="display: none"
+                    >
+                      <div class="form-outline">
+                        <input
+                          type="text"
+                          id="businessName"
+                          class="form-control form-control-lg"
+                          required
+                        />
+                        <label class="form-label" for="businessName"
+                          >Business Name</label
+                        >
+                      </div>
+                    </div>
+                  </div>
 
-                <div class="form-outline mb-4">
-                  <button
-                    class="btn btn-outline-primary btn-lg btn-block"
-                    onclick="window.location.href='/HTML/seller/seller_signup.html'"
-                  >
-                    Seller Account
-                  </button>
-                </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <select
+                        id="userType"
+                        class="select form-control-lg"
+                        required
+                      >
+                        <option value="1" disabled>Choose option</option>
+                        <option value="Buyer">Buyer</option>
+                        <option value="Seller">Seller</option>
+                      </select>
+                      <label class="form-label select-label"
+                        >Choose option</label
+                      >
+                    </div>
+                  </div>
+                  <div class="mt-4 pt-2">
+                    <input
+                      class="btn btn-primary btn-lg"
+                      type="submit"
+                      value="Submit"
+                    />
+                  </div>
+                </form>
               </div>
             </div>
           </div>
@@ -97,4 +188,16 @@
       </p>
     </div>
   </footer>
+  <script>
+    document.getElementById("userType").addEventListener("change", function () {
+      var selectedValue = this.value;
+      var businessNameRow = document.getElementById("businessNameRow");
+
+      if (selectedValue === "Seller") {
+        businessNameRow.style.display = "block";
+      } else {
+        businessNameRow.style.display = "none";
+      }
+    });
+  </script>
 </html>
