--- a/HTML/login and signup pages/signup.html
+++ b/HTML/login and signup pages/signup.html
@@ -28,6 +28,8 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="/Javascript/signup.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -57,7 +59,9 @@
               style="border-radius: 15px"
             >
               <div class="card-body p-4 p-md-5">
-                <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 text-center">Registration Form</h3>
+                <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 text-center">
+                  Create Account
+                </h3>
                 <form>
                   <div class="row">
                     <div class="col-md-6 mb-4">
@@ -66,6 +70,7 @@
                           type="text"
                           id="firstName"
                           class="form-control form-control-lg"
+                          autocomplete="given-name"
                           required
                         />
                         <label class="form-label" for="firstName"
@@ -79,6 +84,7 @@
                           type="text"
                           id="lastName"
                           class="form-control form-control-lg"
+                          autocomplete="family-name"
                           required
                         />
                         <label class="form-label" for="lastName"
@@ -95,6 +101,7 @@
                           type="text"
                           id="username"
                           class="form-control form-control-lg"
+                          autocomplete="username"
                           required
                         />
                         <label class="form-label" for="username"
@@ -108,6 +115,7 @@
                           type="password"
                           id="password"
                           class="form-control form-control-lg"
+                          autocomplete="new-password"
                           required
                         />
                         <label class="form-label" for="password"
@@ -124,6 +132,7 @@
                           type="email"
                           id="emailAddress"
                           class="form-control form-control-lg"
+                          autocomplete="email"
                           required
                         />
                         <label class="form-label" for="emailAddress"
@@ -141,7 +150,7 @@
                           type="text"
                           id="businessName"
                           class="form-control form-control-lg"
-                          required
+                          autocomplete="organization"
                         />
                         <label class="form-label" for="businessName"
                           >Business Name</label
@@ -155,6 +164,7 @@
                       <select
                         id="userType"
                         class="select form-control-lg"
+                        autocomplete="on"
                         required
                       >
                         <option value="1" disabled>Choose option</option>
@@ -166,12 +176,23 @@
                       >
                     </div>
                   </div>
-                  <div class="mt-4 pt-2">
-                    <input
-                      class="btn btn-primary btn-lg"
-                      type="submit"
-                      value="Submit"
-                    />
+                  <hr class="my-4" />
+                  <button
+                    class="btn btn-primary btn-lg btn-block"
+                    type="submit"
+                  >
+                    Sign Up
+                  </button>
+                  <hr class="my-4" />
+                  <div>
+                    <p class="mb-0">
+                      Already have an account?
+                      <a
+                        href="/HTML/login and signup pages/login.html"
+                        class="text-black-50 fw-bold"
+                        >Login</a
+                      >
+                    </p>
                   </div>
                 </form>
               </div>
@@ -188,16 +209,4 @@
       </p>
     </div>
   </footer>
-  <script>
-    document.getElementById("userType").addEventListener("change", function () {
-      var selectedValue = this.value;
-      var businessNameRow = document.getElementById("businessNameRow");
-
-      if (selectedValue === "Seller") {
-        businessNameRow.style.display = "block";
-      } else {
-        businessNameRow.style.display = "none";
-      }
-    });
-  </script>
 </html>
