--- a/HTML/admin/login.html
+++ b/HTML/admin/login.html
@@ -9,6 +9,8 @@
         <title>Login - SB Admin</title>
         <link href="/CSS/admin css/admin_styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!--script src="/Javascript/check_admin_login.js" type="module"></script>
+        <--script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script-->
     </head>
     <body class="bg-primary">
         <div id="layoutAuthentication">
@@ -35,7 +37,7 @@
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                                 <a class="small" href="password.html">Forgot Password?</a>
-                                                <a class="btn btn-primary" href="main_admin_page.html">Login</a>
+                                                <a class="btn btn-primary" href="admin_login_check.html">Login</a>
                                             </div>
                                         </form>
                                     </div>
