--- a/HTML/admin/login.html
+++ b/HTML/admin/login.html
@@ -36,8 +36,11 @@
                                                 <label class="form-check-label" for="inputRememberPassword">Remember Password</label>
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
+                                                <script src="/Javascript/check_admin_login.js"></script>
                                                 <a class="small" href="password.html">Forgot Password?</a>
-                                                <a class="btn btn-primary" href="admin_login_check.html">Login</a>
+                                                <button type="button" onclick="getAdminData()">Login</button>
+                                                
+                                                <!--a class="btn btn-primary" href="admin_login_check.html">Login</-->
                                             </div>
                                         </form>
                                     </div>
