readme file created

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <!-- Product image-->
             <img
               class="card-img-top"
-              src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+              src="https://ovufxfqxnbhzzxjeopxw.supabase.co/storage/v1/object/sign/product_images/hawk-logo-color.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJwcm9kdWN0X2ltYWdlcy9oYXdrLWxvZ28tY29sb3IucG5nIiwiaWF0IjoxNzA4NDU5ODQwLCJleHAiOjE3Mzk5OTU4NDB9.Oe-uqjL8vQR97joEmLOCyAlSEg827T1J8FaygD9YJxg&t=2024-02-20T20%3A10%3A40.292Z"
               alt="..."
             />
             <!-- Product details-->
@@ -188,7 +188,7 @@
         </div>
         <!--Card Ends here-->
 
-        
+
       </div>
     </section>
   </body>
