--- a/HTML/product files/product_view.html
+++ b/HTML/product files/product_view.html
@@ -35,12 +35,11 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="../Javascript/view_products.js" type="module"></script>
+    <script src="../Javascript/database.js" type="module"></script>
     <!--Database-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <!--Need to add to any html file that will use the data base-->
   </head>
-
   <body>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -132,7 +131,7 @@
             </ul>
           </form>
           <form class="d-flex">
-            <button class="btn btn-outline-dark btn-cart" type="submit">
+            <button class="btn btn-outline-dark" type="submit">
               <i class="bi-cart-fill me-1"></i>
               Cart
               <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
@@ -143,23 +142,44 @@
       </div>
     </nav>
 
-    <!-- Header-->
-    <header class="bg-dark py-5">
+    <section class="py-5">
       <div class="container px-4 px-lg-5 my-5">
-        <div class="text-center text-white">
-          <h1 class="display-4 fw-bolder">Shop in style</h1>
-          <p class="lead fw-normal text-white-50 mb-0">With Red Hawk Lux</p>
-        </div>
-      </div>
-    </header>
-
-    <!-- Section for Products -->
-    <section id="products" class="py-5">
-      <div class="container px-4 px-lg-5 mt-5">
-        <div
-          class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
-        >
-          <!-- Products will be dynamically added here -->
+        <div class="row gx-4 gx-lg-5 align-items-center">
+          <div class="col-md-6">
+            <img
+              class="card-img-top mb-5 mb-md-0"
+              src="https://ovufxfqxnbhzzxjeopxw.supabase.co/storage/v1/object/sign/product_images/hawk-logo-color.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJwcm9kdWN0X2ltYWdlcy9oYXdrLWxvZ28tY29sb3IucG5nIiwiaWF0IjoxNzA4NDU5MDg3LCJleHAiOjI0OTY4NTkwODd9.JTblRk-UZrKOpnQMXBF_EaFEi40vJKhftuZwuFtWvNc&t=2024-02-20T19%3A58%3A07.956Z"
+              alt="..."
+            />
+          </div>
+          <div class="col-md-6">
+            <h1 class="display-5 fw-bolder">Shop item template</h1>
+            <div class="fs-5 mb-5">
+              <span>$45.00</span>
+            </div>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium at dolorem quidem modi. Nam sequi consequatur
+              obcaecati excepturi alias magni, accusamus eius blanditiis
+              delectus ipsam minima ea iste laborum vero?
+            </p>
+            <div class="d-flex">
+              <input
+                class="form-control text-center me-3"
+                id="inputQuantity"
+                type="number"
+                value="1"
+                step="1"
+                min="1"
+                max="10"
+                style="max-width: 4rem"
+              />
+              <button class="btn btn-outline-dark flex-shrink-0" type="button">
+                <i class="bi-cart-fill me-1"></i>
+                Add to cart
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
