--- a/HTML/admin/admin_settings.html
+++ b/HTML/admin/admin_settings.html
@@ -7,90 +7,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <!--link href="/CSS/admin css/admin_styles.css" rel="stylesheet" /-->
+    <link rel="icon" href="/images/hawk-logo-color.png" type="image/x-icon" />
+    <link href="/CSS/admin css/admin_styles.css" rel="stylesheet" />
+    <link href="/CSS/admin css/admin_settings_css.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
   <title>Admin Settings</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-
-    section {
-      max-width: 600px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-    }
-
-    h2 {
-      color: #333;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-    }
-
-    input, select {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      box-sizing: border-box;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 16px;
-    }
-
-    button {
-      background-color: #4caf50;
-      color: #fff;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-  </style>
 </head>
 <body>
 
   <header>
     <h1>Admin Settings</h1>
+    <img
+            src="/images/hawk-logo-color.png"
+            alt="Red Hawk Luz logo. The Red Hawk."
+            height="50"
+            width="50"
+    />
   </header>
 
   <section>
     <h2>General Settings</h2>
     <form>
       <label for="siteName">Change Name:</label>
-      <input type="text" id="siteName" name="siteName" value="Your Site">
+      <input type="text" id="siteName" name="siteName" placeholder="Your Name">
+      <a href="#"><button type="submit">Change Name</button></a>
 
       <label for="timezone">Timezone:</label>
       <select id="timezone" name="timezone">
-        <option value="UTC">UTC</option>
+        <option value="EST">EST</option>
         <option value="GMT">GMT</option>
+        <option value="PST">PST</option>
+        <option value="CST">CST</option>
+        <option value="UTC">UTC</option>
+        <option value="MST">MST</option>
         <!-- Add more timezone options as needed -->
 
       </select>
 
-      <button type="submit">Save Changes</button>
+      <h2>Notification Settings</h2>
+
+      <label for="emailNotifications">Email Notifications:</label>
+      <input type="email" id="emailNotifications" name="Email" placeholder="Your Email">
+      <a href="#"><button type="submit">Change Email</button></a>
+
+
+      <label for="smsNotifications">SMS Notifications:</label>
+      <input type="tel" id="smsNotifications" name="smsNotifications" placeholder="Your Phone Number">
+      <a href="#"><button type="submit">Change Phone Number</button></a>
+
+
+      <h2>Security Settings</h2>
+
+      <label for="password">Change Password:</label>
+      <input type="password" id="password" name="password" placeholder="Your Password">
+      <a href="#"><button type="submit">Change Password</button></a>
+
+
     </form>
+    <a href="#"><button class='button1' type="submit">Save Changes</button></a>
   </section>
 
 </body>
+<footer class="py-6 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">
+      Copyright &copy; Red Hawk Lux 2024
+    </p>
+  </div>
+</footer>
 </html>
