--- a/HTML/admin/admin_settings.html
+++ b/HTML/admin/admin_settings.html
@@ -55,7 +55,7 @@
       <h2>Security Settings</h2>
 
       <label for="password">Change Password:</label>
-      <input type="password" id="password" name="password" placeholder="Your Password">
+      <input type="password" id="password" name="password" placeholder="New Password">
       <input class="showpass" type="checkbox" onclick="showPass()">Show Password
       <script src="/Javascript/admin_function.js"></script>
       <a href="#"><button type="submit">Change Password</button></a>
