--- a/HTML/admin/statistics_page.html
+++ b/HTML/admin/statistics_page.html
@@ -54,4 +54,11 @@
 <script src="https://cdn.jsdelivr.net/npm/supabase-js@1.7.2"></script>
 <script src="/Javascript/admin_stats_page.js"></script>
 </body>
+<footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">
+      Copyright &copy; Red Hawk Lux 2024
+    </p>
+  </div>
+</footer>
 </html>
