--- a/HTML/admin/main_admin_page.html
+++ b/HTML/admin/main_admin_page.html
@@ -30,8 +30,8 @@
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#!">My Profile</a></li>
-                        <li><a class="dropdown-item" href="admin_settings.html">Settings</a></li>
-                        <li><a class="dropdown-item" href="admin_activity_log.html">Activity Log</a></li>
+                        <li><a class="dropdown-item" href="#!">Settings</a></li>
+                        <li><a class="dropdown-item" href="#!">Activity Log</a></li>
                         <li><hr class="dropdown-divider" /></li>
                         <li><a class="dropdown-item" href="login.html">Logout</a></li>
                     </ul>
