--- a/HTML/product_files/cart.html
+++ b/HTML/product_files/cart.html
@@ -69,7 +69,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#!">Home</a>
+              <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
             </li>
 
             <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
@@ -85,10 +85,10 @@
                 >Shop
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#!">All Products</a></li>
+                <li><a class="dropdown-item" href="../../index.html">All Products</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#!">Men</a></li>
-                <li><a class="dropdown-item" href="#!">Women</a></li>
+                <li><a class="dropdown-item" href="/HTML/product_files/men.html">Men</a></li>
+                <li><a class="dropdown-item" href="/HTML/product_files/women.html">Women</a></li>
               </ul>
             </li>
           </ul>
@@ -131,7 +131,7 @@
               </li>
             </ul>
           </form>
-          <form class="d-flex">
+          <form class="d-flex" action="/HTML/product_files/cart.html" method="get">
             <button class="btn btn-outline-dark" type="submit">
               <i class="bi-cart-fill me-1"></i>
               Cart
