--- a/HTML/product_files/men.html
+++ b/HTML/product_files/men.html
@@ -45,7 +45,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="../../index.html">
           <img
             src="/images/hawk-logo-color.png"
             alt="Red Hawk Luz logo. The Red Hawk."
@@ -69,7 +69,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
             </li>
 
             <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
@@ -142,33 +142,12 @@
         </div>
       </div>
     </nav>
-
-    <!-- Header-->
-    <header class="bg-dark py-5">
-      <div class="container px-4 px-lg-5 my-5">
-        <div class="text-center text-white">
-          <h1 class="display-4 fw-bolder">Shop in style</h1>
-          <p class="lead fw-normal text-white-50 mb-0">With Red Hawk Lux</p>
-        </div>
-      </div>
-    </header>
-
-    <!-- Section for Products -->
-    <section id="products" class="py-5">
-      <div class="container px-4 px-lg-5 mt-5">
-        <div
-          class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
-        >
-          <!-- Products will be dynamically added here -->
-        </div>
-      </div>
-    </section>
-  </body>
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">
-        Copyright &copy; Red Hawk Lux 2024
-      </p>
-    </div>
-  </footer>
+</body>
+<footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">
+      Copyright &copy; Red Hawk Lux 2024
+    </p>
+  </div>
+</footer>
 </html>
