--- a/HTML/product_files/women.html
+++ b/HTML/product_files/women.html
@@ -35,16 +35,17 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="../Javascript/database.js" type="module"></script>
+    <script src="../Javascript/view_products.js" type="module"></script>
     <!--Database-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <!--Need to add to any html file that will use the data base-->
   </head>
+
   <body>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="../../index.html">
           <img
             src="/images/hawk-logo-color.png"
             alt="Red Hawk Luz logo. The Red Hawk."
@@ -68,7 +69,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#!">Home</a>
+              <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
             </li>
 
             <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
@@ -84,10 +85,10 @@
                 >Shop
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#!">All Products</a></li>
+                <li><a class="dropdown-item" href="../../index.html">All Products</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#!">Men</a></li>
-                <li><a class="dropdown-item" href="#!">Women</a></li>
+                <li><a class="dropdown-item" href="/HTML/product_files/men.html">Men</a></li>
+                <li><a class="dropdown-item" href="/HTML/product_files/women.html">Women</a></li>
               </ul>
             </li>
           </ul>
@@ -130,8 +131,8 @@
               </li>
             </ul>
           </form>
-          <form class="d-flex">
-            <button class="btn btn-outline-dark" type="submit">
+          <form class="d-flex" action="/HTML/product_files/cart.html" method="get">
+            <button class="btn btn-outline-dark btn-cart" type="submit">
               <i class="bi-cart-fill me-1"></i>
               Cart
               <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
@@ -141,54 +142,12 @@
         </div>
       </div>
     </nav>
-
-    <section class="py-5">
-      <div class="container px-4 px-lg-5 my-5">
-        <div class="row gx-4 gx-lg-5 align-items-center">
-          <div class="col-md-6">
-            <img
-              class="card-img-top mb-5 mb-md-0"
-              src="https://ovufxfqxnbhzzxjeopxw.supabase.co/storage/v1/object/sign/product_images/hawk-logo-color.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJwcm9kdWN0X2ltYWdlcy9oYXdrLWxvZ28tY29sb3IucG5nIiwiaWF0IjoxNzA4NDU5MDg3LCJleHAiOjI0OTY4NTkwODd9.JTblRk-UZrKOpnQMXBF_EaFEi40vJKhftuZwuFtWvNc&t=2024-02-20T19%3A58%3A07.956Z"
-              alt="..."
-            />
-          </div>
-          <div class="col-md-6">
-            <h1 class="display-5 fw-bolder">Shop item template</h1>
-            <div class="fs-5 mb-5">
-              <span>$45.00</span>
-            </div>
-            <p class="lead">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Praesentium at dolorem quidem modi. Nam sequi consequatur
-              obcaecati excepturi alias magni, accusamus eius blanditiis
-              delectus ipsam minima ea iste laborum vero?
-            </p>
-            <div class="d-flex">
-              <input
-                class="form-control text-center me-3"
-                id="inputQuantity"
-                type="number"
-                value="1"
-                step="1"
-                min="1"
-                max="10"
-                style="max-width: 4rem"
-              />
-              <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                <i class="bi-cart-fill me-1"></i>
-                Add to cart
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </body>
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">
-        Copyright &copy; Red Hawk Lux 2024
-      </p>
-    </div>
-  </footer>
+</body>
+<footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">
+      Copyright &copy; Red Hawk Lux 2024
+    </p>
+  </div>
+</footer>
 </html>
