--- a/HTML/admin/social_media_admin.html
+++ b/HTML/admin/social_media_admin.html
@@ -27,7 +27,7 @@
           <a href="#" class="socialIcon" title="LinkedIn"><img src="/images/linkedin.png" alt="LinkedIn"></a>
           <a href="#" class="socialIcon" title="YouTube"><img src="/images/yt.png" alt="YouTube"></a>
         </section>
-      
+      <!-- just a test -->
       </body>
       <footer class="py-5 bg-dark">
         <div class="container">
